@@ -1,3 +1,4 @@
 1.) Implemented the FIO, DS Successfully! [7:54pm TimeZone : Asia/Kolkata, 9/23/2024] -> ghgltggamer
 2.) Implemented the robust code generation Successfully! [12:19pm TimeZone : Asia/Kolkata, 9/25/2024] -> ghgltggamer
-2.) Implemented the MATCH and OTHERVISE MACROS Successfully! [10:39pm TimeZone : Asia/Kolkata, 10/10/2024] -> ghgltggamer
+3.) Implemented the MATCH and OTHERVISE MACROS Successfully! [10:39pm TimeZone : Asia/Kolkata, 10/10/2024] -> 
+4.) Implemented the OR MATCH MACRO Successfully [07:33pm, TimeZone : Asia/Kolkata, 11/4/2024]
